<resources>
    <string name="app_name">RxjavaWithKotlinSample</string>
    <string name="activity_main_button_create_text">Create</string>
    <string name="activity_main_button_map_text">Map</string>
    <string name="activity_main_button_zip_text">zip</string>
    <string name="activity_main_button_concat_text">concat</string>
    <string name="activity_main_button_flatmap_text">flatMap</string>
    <string name="activity_main_button_filter_text">filter</string>
    <string name="android_main_button_timer_text">timer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_main_button_intervel_text">intervel</string>
    <string name="activity_main_button_do_on_next">doOnNext</string>
    <string name="activity_main_button_skip_text">skip</string>
    <string name="activity_main_button_take_text">take</string>
    <string name="activity_main_button_just_text">just</string>
    <string name="activity_main_button_single_text">single</string>
    <string name="activity_main_button_debounce_text">debounce</string>
    <string name="activity_main_button_defer_text">defer</string>
    <string name="activity_main_button_last_text">last</string>
    <string name="activity_main_button_merge_text">merge</string>
    <string name="activity_main_button_reduce_text">reduce</string>
    <string name="activity_main_button_scan_text">scan</string>
    <string name="activity_main_button_window_text">window</string>
    <string name="activity_main_button_network_text">network</string>
</resources>
