<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:context="com.zhuxiangqing.rxjavawithkotlinsample.MainActivity">

            <Button
                android:id="@+id/create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_button_create_text" />

            <Button
                android:id="@+id/map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_button_map_text"
                app:layout_constraintTop_toBottomOf="@id/create" />

            <Button
                android:id="@+id/zip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_button_zip_text"
                app:layout_constraintTop_toBottomOf="@id/map" />

            <Button
                android:id="@+id/concat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_button_concat_text"
                app:layout_constraintTop_toBottomOf="@id/zip" />

            <Button
                android:id="@+id/flatMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_button_flatmap_text"
                app:layout_constraintTop_toBottomOf="@id/concat" />

            <Button
                android:id="@+id/filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_button_filter_text"
                app:layout_constraintTop_toBottomOf="@id/flatMap" />

            <Button
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android_main_button_timer_text"
                app:layout_constraintTop_toBottomOf="@id/filter" />

            <Button
                android:id="@+id/intervel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_button_intervel_text"
                app:layout_constraintTop_toBottomOf="@id/timer" />

            <Button
                android:id="@+id/doOnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_button_do_on_next"
                app:layout_constraintTop_toBottomOf="@id/intervel" />

            <Button
                android:id="@+id/skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_button_skip_text"
                app:layout_constraintTop_toBottomOf="@id/doOnNext" />

            <Button
                android:id="@+id/take"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_button_take_text"
                app:layout_constraintTop_toBottomOf="@id/skip" />


            <Button
                android:id="@+id/just"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_button_just_text"
                app:layout_constraintTop_toBottomOf="@id/take" />

            <Button
                android:id="@+id/single"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_button_single_text"
                app:layout_constraintTop_toBottomOf="@id/just" />

            <Button
                android:id="@+id/debounce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_button_debounce_text"
                app:layout_constraintTop_toBottomOf="@id/single" />

            <Button
                android:id="@+id/defer"
                android:layout_width="wrap_contentw"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_button_defer_text"
                app:layout_constraintTop_toBottomOf="@id/debounce" />

            <Button
                android:id="@+id/last"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_button_last_text"
                app:layout_constraintTop_toBottomOf="@id/defer" />

            <Button
                android:id="@+id/merge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_button_merge_text"
                app:layout_constraintTop_toBottomOf="@id/last" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>